Fixed moth not being displayed on mobile

--- a/css/mBugs.css
+++ b/css/mBugs.css
@@ -17,7 +17,7 @@
 #agriasButterfly.bugsMobile {background-position: calc(-100% * 3) calc(-100% * 4);}
 #rajaBrookesBirdwing.bugsMobile {background-position: calc(-100% * 2) calc(-100% * 0);}
 #queenAlexandrasBirdwing.bugsMobile {background-position: calc(-100% * 6) calc(-100% * 0);}
-#moth.bugsMobile {background-position: calc(-100% * 2) calc(-100% * 0);}
+#moth.bugsMobile {background-position: calc(-100% * 2) calc(-100% * 1);}
 #atlasMoth.bugsMobile {background-position: calc(-100% * 8) calc(-100% * 7);}
 #madagascanSunsetMoth.bugsMobile {background-position: calc(-100% * 4) calc(-100% * 5);}
 #longLocust.bugsMobile {background-position: calc(-100% * 9) calc(-100% * 6);}
